# Raytracer

./: CMakeLists.txt  LICENSE.md  Makefile  main.cpp  tracing.cpp  tracing.h
IO/: reader.cpp  reader.h  writer.cpp  writer.h
Samples/: output1self.ppm  output2self.ppm  output3self.ppm
Structures/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.h  PointLight.cpp  PointLight.h  Ray.h  Scene.h  SceneImage.cpp  SceneImage.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
